# promptfy

./: LICENSE  README.md  pyproject.toml
promptfy/: __init__.py  __main__.py  _cli.py  _promptfy.py  _service.py
